--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: fitDTVARMxID
 Title: Fit the Discrete-Time Vector Autoregressive Model for Multiple
         Individuals
-Version: 0.0.0.9003
+Version: 0.0.0.9004
 Authors@R: 
     person(given = "Ivan Jacob Agaloos",
            family = "Pesigan",
@@ -17,12 +17,12 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 VignetteBuilder: knitr
-Depends: R (>= 4.5.0), OpenMx (>= 2.22.10)
+Depends: R (>= 4.1.0), OpenMx (>= 2.22.10)
 Imports: stats, methods, Matrix
-Suggests: knitr, rmarkdown, testthat, simStateSpace
+Suggests: knitr, rmarkdown, testthat, simStateSpace (>= 1.2.14)
 RoxygenNote: 7.3.3.9000
 NeedsCompilation: no
-Packaged: 2026-01-16 01:08:18 UTC; root
+Packaged: 2026-01-17 22:37:24 UTC; root
 Author: Ivan Jacob Agaloos Pesigan [aut, cre, cph] (ORCID:
     <https://orcid.org/0000-0003-4818-8420>)
 Maintainer: Ivan Jacob Agaloos Pesigan <r.jeksterslab@gmail.com>
